make logo transparent to fix IE 7 z-index bug causing date banner to obscure

--- a/sites/all/themes/gardenwalk/css/local.scss
+++ b/sites/all/themes/gardenwalk/css/local.scss
@@ -184,7 +184,7 @@ h1, h2, h3, h4, h5, h6 {
   float: right;
 }
 #site-name a {
-  background: transparent url('../images/gardenwalk-header-logo.png') no-repeat left top;
+  background: transparent url('../images/gardenwalk-header-logo-trans.gif') no-repeat left top;
   height: 0;
   padding-top: 202px;
   display: block;
